@@ -1,3 +1,10 @@
+2014-10-14  Brent Fulgham  <bfulgham@apple.com>
+
+        [Win] Unreviewed build fix after r174710.
+
+        * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
+        (WebCore::MediaPlayerPrivateAVFoundationCF::createSession):
+
 2014-10-14  Dan Bernstein  <mitz@apple.com>
 
         URLs that start with http:/// and https:/// lose two slashes when parsed, causing assertion failure and inconsistent behavior
